Working on fixing large gap when page is in full screen - adding tracked book, status, start, finish elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -151,15 +151,12 @@ td {
 
 .tracked-book-form {
     display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 5px;
 }
 
 .tracked-book-form .form-group {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 5px;
     padding-right: 5px;
 }
